Fix width issues on smaller handsets.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,7 +178,7 @@ nav ul a:hover::after {
   text-align: center;
   display: block;
   vertical-align: middle;
-  height: calc(60vh - 100px);
+  height: 30%;
   max-height: 720px;
 }
 
@@ -205,26 +205,50 @@ strong{
 }
 
 .biography{
-  display: flex;
+  display: inline-block;;
   background: rgb(250, 250, 250);
   text-align: justify;
+  line-height: 1.3;
+}
+
+.biography .bio-text{
+  display: block;
+  margin-left: 100px;
+  margin-right: 100px;
 }
 
 .biography .pic-container{
-  margin-top: 20px;
-  margin-bottom: 20px;
-  margin-left: 50px;
-  margin-right: 50px;
+  float: right;
+  margin-top: 6em;
+  margin-bottom: 0px;
+  margin-right: 100px;
+  margin-left: 20px;
+}
+
+@media (max-width: 500px){
+  .biography .bio-text{
+    display: block;
+    margin-left: 50px;
+    margin-right: 50px;
+  }
+
+  .biography .pic-container{
+    float: right;
+    margin-top: 6em;
+    margin-bottom: 0px;
+    margin-right: 50px;
+    margin-left: 20px;
+  }
 }
 
 .biography .pic-container img{
   display: block;
   border: 4px solid black;
-  height: 150px;
+  height: 140px;
 }
 
 .biography h2{
-  margin-top: 20px;
+  margin-top: 40px;
   font-weight: bold;
   display: block;
   font-size: 1.6em;
@@ -232,7 +256,7 @@ strong{
 }
 
 .biography p{
-  margin: 20px 100px 20px 0px;
+  margin: 20px 0px 40px 0px;
 }
 
 .biography a{
@@ -301,7 +325,6 @@ strong{
   margin: 0 auto;
   padding: 2em 1em 2em 1em;
 
-  width: 100%;
   font-size: 1em;
   background: #181818;
   color: #7d7d7d;
@@ -312,7 +335,6 @@ strong{
 .info{
   text-align: left;
   display: inline-block;
-  zoom: 1;
   vertical-align: top;
   width: 30%;
 }
@@ -363,7 +385,7 @@ strong{
 
 .social-links img{
   transition-duration: 1s;
-  transition-property: color opacity;
+  transition-property: opacity;
   -webkit-filter: opacity(50%);
   filter: opacity(50%);
 }
